# bk-repo

src/backend/: WORKSPACE
src/backend/auth/: module.bazel
src/backend/auth/api-auth/: build.bazel  module.bazel
src/backend/auth/biz-auth/: build.bazel  module.bazel
src/backend/auth/boot-auth/: build.bazel  module.bazel
src/backend/common/: module.bazel
src/backend/common/common-api/: build.bazel  module.bazel
src/backend/common/common-artifact/artifact-api/: build.bazel  module.bazel
src/backend/common/common-artifact/artifact-service/: build.bazel
src/backend/common/common-bksync/: build.bazel  module.bazel
src/backend/common/common-job/: build.bazel  module.bazel
src/backend/common/common-lock/: build.bazel  module.bazel
src/backend/common/common-mongo/: build.bazel
src/backend/common/common-notify/notify-api/: build.bazel  module.bazel
src/backend/common/common-notify/notify-service/: build.bazel  module.bazel
src/backend/common/common-operate/operate-annotation/: build.bazel  module.bazel
src/backend/common/common-operate/operate-api/: build.bazel  module.bazel
src/backend/common/common-operate/operate-service/: build.bazel  module.bazel
src/backend/common/common-query/query-api/: build.bazel
src/backend/common/common-query/query-mongo/: build.bazel  module.bazel
src/backend/common/common-redis/: build.bazel  module.bazel
src/backend/common/common-security/: build.bazel  module.bazel
src/backend/common/common-service/: build.bazel  module.bazel
src/backend/common/common-storage/storage-api/: build.bazel
src/backend/common/common-storage/storage-service/: build.bazel  module.bazel
src/backend/common/common-stream/: build.bazel  module.bazel
src/backend/composer/api-composer/: build.bazel  module.bazel
src/backend/composer/biz-composer/: build.bazel
src/backend/composer/boot-composer/: build.bazel
src/backend/conan/api-conan/: build.bazel  module.bazel
src/backend/conan/biz-conan/: build.bazel  module.bazel
src/backend/conan/boot-conan/: build.bazel  module.bazel
src/backend/fs/api-fs-server/: build.bazel  module.bazel
src/backend/fs/boot-fs-server/: build.bazel  module.bazel
src/backend/generic/api-generic/: build.bazel  module.bazel
src/backend/generic/biz-generic/: build.bazel  module.bazel
src/backend/generic/boot-generic/: build.bazel  module.bazel
src/backend/git/api-git/: build.bazel  module.bazel
src/backend/git/biz-git/: build.bazel  module.bazel
src/backend/git/boot-git/: build.bazel
src/backend/helm/api-helm/: build.bazel  module.bazel
src/backend/helm/biz-helm/: build.bazel  module.bazel
src/backend/helm/boot-helm/: build.bazel  module.bazel
src/backend/job/api-job/: build.bazel  module.bazel
src/backend/job/biz-job/: build.bazel
src/backend/job/boot-job/: build.bazel  module.bazel
src/backend/maven/api-maven/: build.bazel  module.bazel
src/backend/maven/biz-maven/: build.bazel  module.bazel
src/backend/maven/boot-maven/: build.bazel  module.bazel
src/backend/npm-registry/biz-npm-registry/: build.bazel  module.bazel
src/backend/npm-registry/boot-npm-registry/: build.bazel  module.bazel
src/backend/npm/api-npm/: build.bazel  module.bazel
src/backend/npm/biz-npm/: build.bazel  module.bazel
src/backend/npm/boot-npm/: build.bazel
src/backend/nuget/api-nuget/: build.bazel  module.bazel
src/backend/nuget/biz-nuget/: build.bazel  module.bazel
src/backend/nuget/boot-nuget/: build.bazel  module.bazel
src/backend/oci/api-oci/: build.bazel  module.bazel
src/backend/oci/biz-oci/: build.bazel  module.bazel
src/backend/oci/boot-oci/: build.bazel  module.bazel
src/backend/opdata/api-opdata/: build.bazel
src/backend/opdata/biz-opdata/: build.bazel
src/backend/opdata/biz-opdata/src/main/kotlin/com/tencent/bkrepo/opdata/registry/: ServiceDiscoveryConfig.kt
src/backend/opdata/biz-opdata/src/main/kotlin/com/tencent/bkrepo/opdata/registry/consul/: ConsulRegistryClient.kt
src/backend/opdata/biz-opdata/src/main/kotlin/com/tencent/bkrepo/opdata/registry/k8s/: KubernetesServiceDiscovery.kt
src/backend/opdata/biz-opdata/src/main/kotlin/com/tencent/bkrepo/opdata/registry/spring/: EnvLabelConfig.kt  SpringCloudServiceDiscovery.kt
src/backend/opdata/biz-opdata/src/main/kotlin/com/tencent/bkrepo/opdata/service/: OpServiceService.kt
src/backend/opdata/boot-opdata/: build.bazel  module.bazel
src/backend/pypi/api-pypi/: build.bazel  module.bazel
src/backend/pypi/biz-pypi/: build.bazel  module.bazel
src/backend/pypi/boot-pypi/: build.bazel  module.bazel
src/backend/rds/api-rds/: build.bazel
src/backend/rds/biz-rds/: build.bazel  module.bazel
src/backend/rds/boot-rds/: build.bazel  module.bazel
src/backend/replication/api-replication/: build.bazel  module.bazel
src/backend/replication/biz-replication/: build.bazel  module.bazel
src/backend/replication/boot-replication/: build.bazel  module.bazel
src/backend/repository/api-repository/: build.bazel
src/backend/repository/biz-repository/: build.bazel  module.bazel
src/backend/repository/boot-repository/: build.bazel  module.bazel
src/backend/rpm/api-rpm/: build.bazel  module.bazel
src/backend/rpm/biz-rpm/: build.bazel  module.bazel
src/backend/rpm/boot-rpm/: build.bazel  module.bazel
src/backend/webhook/api-webhook/: build.bazel  module.bazel
src/backend/webhook/biz-webhook/: build.bazel  module.bazel
src/backend/webhook/boot-webhook/: build.bazel  module.bazel
src/frontend/: package-lock.json  package.json
src/frontend/core/devops-op/: package.json  vite.config.js
src/frontend/core/devops-op/src/api/: federatedEvent.js  federatedFailureRecord.js  federatedRepository.js  federatedStatus.js  federatedTrack.js
src/frontend/core/devops-op/src/router/: index.js
src/frontend/core/devops-repository/: index.html
src/frontend/core/devops-repository/src/: App.vue  AppMixin.js  main.js
src/frontend/core/devops-repository/static/: sw.js  webpack_public_path.js
src/frontend/locale/repository/: en-US.json  zh-CN.json
support-files/kubernetes/charts/bkrepo/: values.yaml
(+17 files in other folders)
