load("@io_bazel_rules_kotlin//kotlin:jvm.bzl", "kt_jvm_binary")
load("@io_bazel_rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library")
load("@rules_java//java:defs.bzl", "java_binary", "java_library")
load("@io_bazel_rules_kotlin//kotlin:core.bzl", "define_kt_toolchain")

define_kt_toolchain(
    name = "kotlin_toolchain",
    api_version = "1.4",  # "1.1", "1.2", "1.3", "1.4", "1.5" "1.6", or "1.7"
    jvm_target = "1.8", # "1.6", "1.8", "9", "10", "11", "12", "13", "15", "16", or "17"
    language_version = "1.4",  # "1.1", "1.2", "1.3", "1.4", "1.5" "1.6", or "1.7"
)

package(default_visibility = ["//visibility:public"])

deps = [
    "@maven//:io_swagger_swagger_annotations",
    "@maven//:io_swagger_swagger_models",
    "@maven//:com_fasterxml_jackson_module_jackson_module_kotlin",
    "@maven//:com_fasterxml_jackson_datatype_jackson_datatype_jdk8",
    "@maven//:com_fasterxml_jackson_datatype_jackson_datatype_jsr310",
    "@maven//:com_fasterxml_jackson_dataformat_jackson_dataformat_yaml",
    "@maven//:com_fasterxml_jackson_dataformat_jackson_dataformat_xml",
    "@maven//:com_fasterxml_jackson_module_jackson_module_parameter_names",
    "@maven//:org_apache_commons_commons_compress",
]

java_library(
    name = "common-api-java-lib",
    srcs = glob([
        "src/main/java/**/*.java",
    ]),
    deps = deps,
)

kt_jvm_library(
    name = "common-api-lib",
    srcs = glob([
        "src/main/kotlin/**/*.kt",
    ]),
    resources = glob([
        "src/main/resources/**",
    ]),
    deps = deps + [":common-api-java-lib"],
)