load("@io_bazel_rules_kotlin//kotlin:jvm.bzl", "kt_jvm_binary")
load("@io_bazel_rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library")
load("@rules_java//java:defs.bzl", "java_binary", "java_library")
load("@io_bazel_rules_kotlin//kotlin:core.bzl", "define_kt_toolchain")

package(default_visibility = ["//visibility:public"])

define_kt_toolchain(
    name = "kotlin_toolchain",
    api_version = "1.4",  # "1.1", "1.2", "1.3", "1.4", "1.5" "1.6", or "1.7"
    jvm_target = "1.8", # "1.6", "1.8", "9", "10", "11", "12", "13", "15", "16", or "17"
    language_version = "1.4",  # "1.1", "1.2", "1.3", "1.4", "1.5" "1.6", or "1.7"
)

deps = [
    "@maven//:org_springframework_boot_spring_boot_starter_data_redis",
]

kt_jvm_library(
    name = "common-redis-lib",
    srcs = glob([
        "src/main/kotlin/**/*.kt",
    ]),
    resources = glob([
        "src/main/resources/**",
    ]),
    deps = deps,
)