load("@io_bazel_rules_kotlin//kotlin:jvm.bzl", "kt_jvm_binary")
load("@io_bazel_rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library")
load("@io_bazel_rules_kotlin//kotlin:core.bzl", "define_kt_toolchain")

define_kt_toolchain(
    name = "kotlin_toolchain",
    api_version = "1.4",  # "1.1", "1.2", "1.3", "1.4", "1.5" "1.6", or "1.7"
    jvm_target = "1.8", # "1.6", "1.8", "9", "10", "11", "12", "13", "15", "16", or "17"
    language_version = "1.4",  # "1.1", "1.2", "1.3", "1.4", "1.5" "1.6", or "1.7"
)

package(default_visibility = ["//visibility:public"])

deps = [
    "@maven//:org_jetbrains_kotlinx_kotlinx_coroutines_core",
    "@maven//:org_redline_rpm_redline",
    "@maven//:com_thoughtworks_xstream_xstream",
    "//common/common-job:common-job-lib",
    "//rpm/api-rpm:api-rpm-lib",
]
kt_jvm_library(
    name = "api-rpm-lib",
    srcs = glob([
        "src/main/kotlin/**/*.kt",
    ]),
    resources = glob([
        "src/main/resources/**",
    ]),
    deps = deps,
)
